# baque

./: .clang-format  .clang-tidy  .gitignore  BAQUE-ESCOPO.md  BAQUE-UI-SPEC.md  BAQUE_MOCKUP.html  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
.paul/: HANDOFF-2026-06-04b.md  HANDOFF-2026-06-23.md  HANDOFF-phase10-plan01-audited.md  PROJECT.md  ROADMAP.md  STATE.md  config.md  ledger.toml  paul.toml
.paul/handoffs/archive/: HANDOFF-2026-06-04.md  HANDOFF-2026-06-05.md  HANDOFF-2026-06-06.md  HANDOFF-2026-06-08.md  HANDOFF-2026-06-08b.md  HANDOFF-2026-06-09.md  HANDOFF-2026-06-10.md
.paul/phases/01-setup/: 01-01-AUDIT.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-AUDIT.md  01-02-PLAN.md  01-02-SUMMARY.md
.paul/phases/02-core-audio/: 02-01-AUDIT.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-AUDIT.md  02-02-PLAN.md  02-02-SUMMARY.md
.paul/phases/03-sequencer-base/: 03-01-AUDIT.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-AUDIT.md  03-02-PLAN.md  03-02-SUMMARY.md
.paul/phases/04-sample-engine/: 04-01-AUDIT.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-AUDIT.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-AUDIT.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-AUDIT.md  04-04-PLAN.md  04-04-SUMMARY.md
.paul/phases/05-feel-engine/: 05-01-AUDIT.md  05-01-PLAN.md  05-01-SUMMARY.md  05-02-AUDIT.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-AUDIT.md  05-03-PLAN.md  05-03-SUMMARY.md
.paul/phases/06-fx-plocks/: 06-01-AUDIT.md  06-01-PLAN.md  06-01-SUMMARY.md  06-02-AUDIT.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-AUDIT.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-AUDIT.md  06-04-PLAN.md  06-04-SUMMARY.md
.paul/phases/07-lo-fi-granular/: 07-01-AUDIT.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-AUDIT.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-AUDIT.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-AUDIT.md  07-04-PLAN.md  07-04-SUMMARY.md
.paul/phases/08-scatter-perf-fx/: 08-01-AUDIT.md  08-01-PLAN.md  08-01-SUMMARY.md  08-02-AUDIT.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-AUDIT.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-AUDIT.md  08-04-PLAN.md  08-04-SUMMARY.md
.paul/phases/09-midi-hardware/: 09-01-AUDIT.md  09-01-PLAN.md  09-01-SUMMARY.md  09-02-AUDIT.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-AUDIT.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-AUDIT.md  09-04-PLAN.md  09-04-SUMMARY.md
.paul/phases/10-ui-ux/: 10-01-AUDIT.md  10-01-PLAN.md  10-01-SUMMARY.md  10-02-AUDIT.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-AUDIT.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-AUDIT.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-AUDIT.md  10-05-PLAN.md  10-05-SUMMARY.md  10-06-AUDIT.md  10-06-PLAN.md  10-06-SUMMARY.md  10-07-AUDIT.md  10-07-PLAN.md  10-07-SUMMARY.md
.paul/phases/11-presets-library/: 11-01-AUDIT.md  11-01-PLAN.md  11-01-SUMMARY.md  11-02-AUDIT.md  11-02-PLAN.md  11-02-SUMMARY.md
.paul/phases/12-hardening/: 12-01-AUDIT.md  12-01-PLAN.md  12-01-SUMMARY.md  12-02-AUDIT.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-AUDIT.md  12-03-PLAN.md  12-03-SUMMARY.md
.paul/phases/13-release/: 13-01-AUDIT.md  13-01-PLAN.md  13-01-SUMMARY.md  13-02-AUDIT.md  13-02-PLAN.md  13-02-SUMMARY.md
scripts/: run_pluginval.sh
src/: factory_preset_library.cpp  factory_preset_library.h  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  preset_manager.cpp  preset_manager.h  rt_safety.h
src/audio/: feel_engine.cpp  feel_engine.h  feel_pattern.h  feel_presets.cpp  feel_presets.h  fx_chain.cpp  fx_chain.h  fx_params.h  gater_processor.cpp  gater_processor.h  granular_processor.cpp  granular_processor.h  hardware_templates.h  lane_routing.h  lo_fi_processor.cpp  lo_fi_processor.h  midi_cc.h  midi_clock.cpp  midi_clock.h  note_tracker.cpp  note_tracker.h  pad_bank.h  perf_state.h  plock_pattern.h  sample_voice.cpp  sample_voice.h  scatter_engine.cpp  scatter_engine.h  scheduler.cpp  scheduler.h  sequencer.cpp  sequencer.h  sidechain_comp.cpp  sidechain_comp.h  slicer.cpp  slicer.h  step_clock.cpp  step_clock.h  step_pattern.cpp  step_pattern.h  (+10 more)
src/ui/: baque_fader.h  baque_knob.h  baque_look_and_feel.cpp  baque_look_and_feel.h  baque_meter.cpp  baque_meter.h  browser_screen.cpp  browser_screen.h  feel_field_component.cpp  feel_field_component.h  fx_screen.cpp  fx_screen.h  header_component.cpp  header_component.h  midi_screen.cpp  midi_screen.h  mix_screen.cpp  mix_screen.h  pad_grid_component.cpp  pad_grid_component.h  perf_fx_screen.cpp  perf_fx_screen.h  perform_screen.cpp  perform_screen.h  sample_editor_component.cpp  sample_editor_component.h  sequencer_component.cpp  sequencer_component.h
tests/: CMakeLists.txt  rt_alloc_counter.cpp  rt_alloc_counter.h  test_feel_engine.cpp  test_feel_presets.cpp  test_fx_chain.cpp  test_fx_mix_screens.cpp  test_fx_plock_dod.cpp  test_gater.cpp  test_granular.cpp  test_granular_chain.cpp  test_hardware_templates.cpp  test_lo_fi.cpp  test_lo_fi_chain.cpp  test_lookandfeel.cpp  test_midi_cc.cpp  test_midi_clock.cpp  test_midi_routing.cpp  test_mute_solo.cpp  test_nav_shell.cpp  test_pad_bank.cpp  test_perf_fx_midi_screens.cpp  test_perform_screen.cpp  test_phase10_dod.cpp  test_phase11_dod.cpp  test_phase12_dod.cpp  test_phase8_dod.cpp  test_phase9_dod.cpp  test_plock.cpp  test_scatter.cpp  test_scatter_chain.cpp  test_sequencer.cpp  test_sidechain_comp.cpp  test_slicer.cpp  test_smoke.cpp  test_tape_stop.cpp  test_time_stretch.cpp  test_tr8_spec_conformance.cpp  test_transport.cpp  test_trig_fills.cpp  (+3 more)
